--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="bg-inf_1"></div> 
                     <div class="inf_1">
                         
-                        <h1>Noel Taylor</h1>
+                        <h1>Justin Bieber</h1>
                         <h3>Graphic & Web Designer</h3>
                         <img src="img/cv-image.jpg" alt="" class="img-hero">
                     </div>
